DEVENV: intermediary commit after new code quality checks